Revert "Refakturert oppsett av tester (#407)" (#420)
This reverts commit 8f47c7d7ccf58cc623ca1b5ff9e789f145fe3a81.