@@ -30,7 +30,6 @@ val commonVersion = "3.2024.10.25_13.44-9db48a0dbe67"
 val unleashVersion = "11.0.2"
 val ktlintVersion = "1.4.1"
 val amtLibVersion = "1.2025.06.05_08.25-2338e0f39f58"
-val springmockkVersion = "4.0.2"
 
 dependencies {
     implementation("org.springframework.boot:spring-boot-starter")
@@ -73,7 +72,6 @@ dependencies {
     implementation("no.nav.amt.lib:models:$amtLibVersion")
     implementation("no.nav.amt.lib:kafka:$amtLibVersion")
 
-    testImplementation("org.springframework.boot:spring-boot-testcontainers")
     testImplementation("org.springframework.boot:spring-boot-starter-test") {
         exclude("com.vaadin.external.google", "android-json")
     }
@@ -86,7 +84,10 @@ dependencies {
     testImplementation("io.mockk:mockk:$mockkVersion")
     testImplementation("no.nav.amt.lib:testing:$amtLibVersion")
     testImplementation("com.squareup.okhttp3:mockwebserver:$okHttpVersion")
-    testImplementation("com.ninja-squad:springmockk:$springmockkVersion")
+}
+
+tasks.getByName<org.springframework.boot.gradle.tasks.bundling.BootJar>("bootJar") {
+    this.archiveFileName.set("${archiveBaseName.get()}.${archiveExtension.get()}")
 }
 
 kotlin {
@@ -97,19 +98,10 @@ kotlin {
     }
 }
 
-ktlint {
-    version = ktlintVersion
+configure<org.jlleitschuh.gradle.ktlint.KtlintExtension> {
+    version.set(ktlintVersion)
 }
 
-tasks.jar {
-    enabled = false
-}
-
-tasks.test {
+tasks.withType<Test> {
     useJUnitPlatform()
-
-    jvmArgs(
-        "-Xshare:off",
-        "-XX:+EnableDynamicAgentLoading",
-    )
 }
